added manual creation of hotel index
